# Echelon

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  railway.json
backend/: Dockerfile  Dockerfile.production  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_careers_provenance.py  0003_course_cache.py  0004_share_links.py  0005_chat_messages.py
backend/app/: auth.py  config.py  database.py  limiter.py  main.py
backend/app/llm/: client.py  prompts.py  validators.py
backend/app/models/: __init__.py  career.py  chat.py  course.py  profile.py  recommendation.py  user.py
backend/app/routers/: admin.py  analyze.py  careers.py  chat.py  courses.py  export.py  health.py  profiles.py  recommendations.py  resume.py
backend/app/schemas/: admin.py  analyze.py  career.py  common.py  matches.py  profile.py  recommendation.py
backend/app/seed/: careers.json  seed.py
backend/app/services/: gap_analyzer.py  matching.py  proposer.py  ranker.py  roadmap.py
backend/app/services/chat/: attachments.py  prompts.py  service.py
backend/app/services/courses/: aggregator.py  ranker.py  schemas.py  tavily.py  youtube.py
backend/app/services/resume/: extractor.py  parser.py  schemas.py  validator.py
backend/scripts/: README.md  ingest_onet.py
backend/templates/: report.html
backend/tests/: conftest.py  test_admin.py  test_api.py  test_matching.py  test_proposer.py  test_resume.py
backend/tests/fixtures/resumes/: non_resume.txt  valid_resume.txt
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: OnboardingTour.tsx  ResumeUploadWidget.tsx  TagInput.tsx  Vantage.tsx  theme-toggle.tsx
frontend/src/components/ui/: badge.tsx  (+3 more)
frontend/src/lib/: api.ts  schemas.ts  skills.ts  types.ts
frontend/src/styles/: globals.css
(+2 files in other folders)
